--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -57,94 +57,117 @@ This has consequences for the possible roles of interaction in explaining the ev
 
 \section{Mindreading: the normative project}
 
-Many people expect to know what those around them are thinking and doing, within limits.
-If someone were to complain of a co-worker that she can never tell what he is thinking or doing,
-the complaint might be informative, surprising even.
-And we might reasonably wonder where the fault lies.
-Maybe the co-worker really is a closed book,
-but maybe the complainant is not really trying to understand him.
-For humans and perhaps other species too,
-access to the actions and minds of those nearby,
-to some of their beliefs and desires,
-emotions, intentions and knowledge states,
-is often normal in this sense: it is lack of access, not access, that is remarkable.
-In this respect we might compare identifying others' thoughts and actions with identifying their ages or masses.
-Although all of these can be disguised with the right props and techniques, some degree of revelation is normal.
+Mindreading is
+the process of identifying thoughts and actions on the basis of bodily movements,
+somewhat as reading is the process of identifying propositions on the basis of inscriptions \citep[p.\ 4]{Apperly:2010kx}.
+Contrast
+a mindreader who is, or appears to be, capable of interacting with her targets 
+and
+a mindreader who can manifestly only observe.
+Is it possible that the interacting mindreader is in a position to know things which she would be unable to know if she were unable to interact with her targets?
+Our aim in this paper is to argue that the answer is a qualified `yes'.
 
-The normalcy of mindreading,
-together with the fact that it often occurs spontaneously (if imperfectly),%
-%
-\footnote{
-On the spontaneity of mindreading in human adults see 
-\citet{senju_mindblind_2009} and 
-\citet{ferguson_eye_2011}.
-On imperfections in human adults' mindreading, 
-see \citet{Keysar:2003xu}.
-Both points come together in \citet{ferguson_listeners_2012}.
-}
-%
-make it easy to 
-overlook questions about its evidential basis.
-Indeed,
-while philosophers have engaged with questions about mechanisms (such as whether mindreading involves a process of simulation or of theorizing or some combination of the two),
-comparatively little effort has been devoted to issues about what evidence could ground mindreading.
-In this paper we pursue one such issue.
+The question is about the evidential basis of mindreading, 
+not about what sorts of mechanisms are involved.
+While philosophers have engaged with questions about mechanisms (such as whether mindreading involves a process of simulation or of theorizing or some combination of the two),
+comparatively little effort has recently been devoted to issues about what evidence could ground mindreading.
 
-%In everyday life it is sometimes so obvious what others are thinking and doing
-%that it is easy to forget that mindreaders begin life with no knowledge of the specific contents of particular individuals' thoughts 
-%and that to acquire this knowledge
-%there must be 
-
+Our question is part of a broader question,
 What is the evidential basis for ascriptions of thought and action and how does the evidence support the ascriptions?
-To stress that this question is not directly about about \emph{how} anyone actually ascribes thoughts or identifies actions% 
-% nor directly about the mechanisms, processes or representations involved in mindreading
-, Davidson 
-sometimes formulates the question by asking what someone \emph{could} know that would put them in a position to identify another's thoughts and actions.%
-\footnote{
-See, e.g., \citet[p.\ 126]{Davidson:1973jx}.
-While what follows draws  on Davidson's questions and insights,
-our aims here are more modest than his.
-For here we are concerned only with a  fraction of the problem of ascribing mental states and meanings,
-and we are not concerned with larger claims about mind, meaning and truth 
-(on which see 
-\citet{Davidson:1990du} and 
-\citet{lepore_donald_2005}).
-}
-
+%\footnote{
+%See e.g.\ \citet[pp.\ 126-7]{Davidson:1973jx}.
+%}
+%To stress that this question is not directly about about \emph{how} anyone actually ascribes thoughts or identifies actions% 
+%% nor directly about the mechanisms, processes or representations involved in mindreading
+%, Davidson 
+%sometimes formulates the question by asking what someone \emph{could} know that \emph{would} put them in a position to identify another's thoughts and actions.%
+%\footnote{
+%See, e.g., \citet[p.\ 126]{Davidson:1973jx}.
+%While what follows draws  on Davidson's questions and insights,
+%our aims here are more modest than his.
+%For here we are concerned only with a  fraction of the problem of ascribing mental states and meanings,
+%and we are not concerned with larger claims about mind, meaning and truth 
+%(on which see 
+%\citet{Davidson:1990du} and 
+%\citet{lepore_donald_2005}).
+%}
 The most sustained attempts to answer this question,
 Davidson's (\citeyear{Davidson:1984wh}; \citeyear{Davidson:1990du}), Lewis' (\citeyear{lewis:1974ri}) and Dennett's (\citeyear{Dennett:1987sf}),
 do not exploit the possibility of interaction.
-The evidential bases they consider and the principles which they identify to link the evidence with ascriptions of thought and action are available to entirely passive observers.
+The evidence and principles they consider are available to manifestly passive observers.
 So on their theories,
 a purely passive mindreader observing from behind a one-way mirror
 is on a par with
-a mindreader who does or could interact with those she seeks to interpret.
+a mindreader who, actually or apparently, could interact with those she seeks to interpret.
 The two are on a par in this sense:
 in principle the same evidence could be available to each, and each can exploit the same principles in moving from evidence to ascriptions of thought.
+Of course none of these theories is incompatible with the idea that interaction might be useful for mindreading in practice.  
+The point is just that, on these theories, interaction makes no difference to the theory.
 In this paper we aim to show
-that mindreaders  capable of interacting with their targets are at an advantage.
-Their ascriptions can rely on evidence and principles which would be unavailable if they were entirely passive observers.
+that mindreaders actually or apparently capable of interacting with their targets are at an advantage not only in practice but also in theory.
+Their ascriptions could rely on evidence and principles which would be unavailable if they were entirely passive observers.
 
-Being poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know, or so we aim to show in what follows.
-Because the leading theories have supposed that being able to interact makes no difference,
-they have treated the evidential basis for mindreading as more narrow than it truly is.
-This matters because broadening the evidential basis will enable us to give a more accurate and comprehensive theory of mindreading.
-And, as we shall argue, this in turn matters because it may bear on the possibility of explaining the emergence, in evolution or in development, of mindreading.
-Several researchers have offered quite general conjectures about how interaction might explain the emergence of sophisticated forms of cognition.%
+Why investigate this claim?
+One reason is simply because the investigation will enable us to revise and extend existing accounts of the evidential basis of mindreading  in ways that make them more accurate and comprehensive.
+Another motive concerns the emergence, in evolution and in development, of mindreading.
+Several researchers have offered quite general conjectures about how interaction might explain the emergence of sophisticated forms of cognition.
+One view is that needs to interact with others have driven and shaped some aspects of cognition.%
+\footnote{
+E.g.\ \citet[p.\ 103]{Knoblich:2006bn} suggest that 
+`functions traditionally considered hallmarks of individual cognition originated through the need to interact with others'
+and that
+`perception, action, and cognition are grounded in social interaction.'
+}
+We shall not speak to this view here.
+Another view is that abilities to interact with others
+may have fostered the emergence in evolution---or, on a related view, in development---%
+of sophisticated forms of cognition including social cognition and, in particular, mindreading.%
 \footnote{
 \citet[p.\ 1]{Moll:2007gu}
 argue for the `Vygotskian Intelligence Hypothesis' according to which `the unique aspects of human cognition ... were driven by, or even constituted by, social co-operation.'
-\citet[p.\ 103]{Knoblich:2006bn} offer a different conjecture:
-`perception, action, and cognition are grounded in social interaction  … functions traditionally considered hallmarks of individual cognition originated through the need to interact with others.'
+See also
+	\citet{Hughes:2004zj},
+	\citet{Hughes:2006fu},
+	\citet{Tomasello:2007gl} and
+	\citet{tomasello:2008origins}.
 }
-Studying how interaction broadens the evidential basis of mindreading will eventually point to one way of filling in some details.
+Studying how interaction broadens the evidential basis of mindreading will eventually point to one way of filling in some details on just how interaction might facilitate the emergence of mindreading.
 
-%This, then, is our pitch.
-%To formulate (and, eventually, test) hypotheses about how mindreading develops,
-%or about how it evolves,
-%it is useful to understand not only which mechanisms mindreading involves
-%but also what evidence grounds mindreading.
-%And it since it turns out 
+Our claim needs to be qualified in several ways.
+First, we should highlight something already explicit that has not yet been emphasised:
+the claim applies not just to 
+ mindreaders who actually could interact with their targets
+but also to
+ mindreaders who appear to their targets to be potential interaction partners (even if they are not).
+Trading the risk of a minor misunderstanding for concision we use the term `interacting mindreader' to refer to both groups;
+similarly, references to mindreaders who `only observe' must be understood as excluding those who appear to their targets to be interaction partners.
+Only cases involving the first group---mindreaders who actually could interact---are likely to be of wider interest.
+Cases involving misleading appearances might be regarded as artefacts of the model.
+Any application of our claim to understanding evolution or development is bound to focus on cases where mindreaders actually could interact with their targets.
+
+A second qualification concerns the scope of mindreading.
+In most discussions of mindreading, the focus is on  ascription of beliefs and other mental states to individuals.
+But in what follows we shall focus on the ascription of goals to actions.
+As we explain below, 
+some may deny that goal ascription is mindreading.
+Our view is consistent with this denial.
+Evidence for ascriptions of beliefs and other mental states includes the occurrence (and non-occurrence) of goal-directed actions,
+and identifying these typically requires goal ascription.
+In some cases, then, 
+evidence for the ascription of a goal
+will indirectly support the ascription of a belief or other mental state.
+Accordingly, even those who deny that goal ascription is mindreading should agree that sometimes evidence for a goal ascription is indirectly evidence for the ascription of a belief or other mental state.
+So whether or not goal ascription is deemed to be mindreading,
+a mindreader's access to evidence for mindreading  depends in part on her access to evidence for goal ascription.
+Our plan is to show that interacting mindreaders could make use, in ascribing goals, of evidence and principles which are not available to mere observers (who do not even appear to be in a position to interact with their targets).
+By showing this we will have shown that
+being (or appearing) poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know.
+
+%Because the leading theories have supposed that being able to interact makes no difference,
+%they have treated the evidential basis for mindreading as more narrow than it truly is.
+%This matters
+%because broadening the evidential basis will enable us to give a more accurate and comprehensive theory of mindreading.
+%And, as we shall argue, this in turn matters because it may bear on the possibility of explaining the emergence, in evolution or in development, of mindreading.
 
 
 
@@ -161,12 +184,12 @@ only some are outcomes to which the action was directed.
 Goal ascription is the process of identifying from among an action's actual and possible outcomes
 those to which it is directed.
 We shall focus on goal ascription rather than the ascription of beliefs and mental states that has captured most interest.
-Our immediate question is therefore, 
-What evidence could support hypotheses about the outcomes to which actions are directed, 
-and how would the evidence support the hypotheses?
+%Our immediate question is therefore, 
+%What evidence could support hypotheses about the outcomes to which actions are directed, 
+%and how would the evidence support the hypotheses?
 
-We focus on goal ascription 
-partly to simplify our argument,
+We narrow our focus to goal ascription 
+partly because this simplifies our argument,
 but mainly because goal ascription is widely thought to be among the very earliest components of mindreading to emerge (or, if goal ascription is not mindreading, then it is a late precursor).%
 \footnote{
 See, for example,
@@ -176,7 +199,7 @@ See also
 \citet[p.\ 111, Box 1]{Baillargeon:gx}
 on two subsystems
 and 
-\citet{Povinelli:2001jf} on `behavioural regularities'.
+\citet{Povinelli:2001jf} on `behavioural regularities' whose specification sometimes appears to involve goal-directed action.
 }
 By showing that
   interacting mindreaders may have access to 
@@ -207,9 +230,15 @@ This is one illustration of how goal ascription could in principle enable us to 
 
 Goal ascription enables one
 to predict and manipulate others' actions.
-***if goal involved manipulating an object, you can predict where agent will go at some point; you can also manipulate the agents' action by revealling the location of the object.  Eg. Liszowski pointing
-%This applies even to goal ascribers with no further mindreading abilities: 
-% even those unable to identify beliefs, desires and other propositional attitudes have much to gain from identifying the outcomes to which other agents' actions are directed.
+If you know that an agent is engaged in a sequence of actions whose eventual goal involves retrieving some object,
+you may be able to predict that the agent will go to where the object is at some point.\footnote{
+For a practical application of this prediction, see \citet{Hare:2001ph}.
+}
+Equally, in some cases knowing this much about the goal of another's actions many enable you to assist them,
+either 
+by retrieving the object for them \citep[e.g.][]{warneken:2007sa}
+or
+by revealing the object's location to them \citep[e.g.][]{Liszkowski:2008al}.
 
 
 Goal ascription is also instrumental for mindreading:
@@ -242,7 +271,7 @@ For mindreading typically involves or depends on predictions about how individua
 and those predictions can rarely be verified without the mindreader identifying to which goals the actions are directed.
 So even if goal ascription is not mindreading,
 our mission---which is to show that
-being poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know---%
+being (or appearing) poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know---%
 can be achieved by focusing on goal ascription.
 If we can show that
   some evidence for goal ascription is only available to mindreaders who can interact with their targets
@@ -318,7 +347,7 @@ Call this the problem of opaque means.
 
 We are not suggesting that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal, of course.
 Of course opaque means are not in every case an insurmountable obstacle to goal ascription.
-Our point is pure commonsense and already widely appreciated:
+This point is neither novel nor surprising:
 opaque means sometimes  deprive interpreters of evidence and so prevent goal ascription.
 
 Some of the most plausibly unique aspects of human cognition depend on our abilities to recognise the goals of novel behaviours involving tools, and of communicative gestures.
